--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,10 +11,10 @@
     <string name="incorrect_toast">Incorrect!</string>
 
     <!-- Questions -->
-    <string name="question_australia"></string>
-    <string name="question_oceans"></string>
-    <string name="question_mideast"></string>
-    <string name="question_africa"></string>
-    <string name="question_americas"></string>
-    <string name="question_asia"></string>
+    <string name="question_australia">Canberra is the capital of Australia</string>
+    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
+    <string name="question_mideast">The Suez Canal connects the Read Sea and the Indian Ocean</string>
+    <string name="question_africa">The source of the nile river is in Egypt</string>
+    <string name="question_americas">The Amazon river is the largest river in the Americas</string>
+    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>
 </resources>
