--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,15 @@
     <string name="false_button">False</string>
     <string name="previous_button">Previous</string>
     <string name="next_button">Next</string>
+    <string name="show_answer_button">Show Answer</string>
+    <string name="cheat_button">Cheat!</string>
 
     <!-- UI Labels -->
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
+    <string name="judgment_toast">Cheating is wrong</string>
     <string name="score_label">You got %f%% of the questions correct!</string>
+    <string name="warning_text">Are you sure you want to do this?</string>
 
     <!-- Questions -->
     <string name="question_australia">Canberra is the capital of Australia</string>
